--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hero Travel</title>
     <link rel="shortcut icon" href="Images/Group 40071 (2).png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/bf49972686.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,6 +25,20 @@
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <h1>Explore Your Travel</h1>
+            <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis sapien urna eu phasellus.</p>
+            <div class="banner-inputs">
+                <input type="text" placeholder="Where go" class="input1">
+                <select name="" id="input2">
+                    <option value="">When</option>
+                </select>
+                <select name="" id="input3">
+                    <option value="">Select Type</option>
+                </select>
+                <input type="submit" value="Find Now" class="btn-primary">
+            </div>
+        </div>
     </header>
 </body>
 
