--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         </nav>
         <div class="banner">
             <h1>Explore Your Travel</h1>
-            <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis sapien urna eu phasellus.</p>
+            <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac
+                quis sapien urna eu phasellus.</p>
             <div class="banner-inputs">
                 <input type="text" placeholder="Where go" class="input1">
                 <select name="" id="input2">
