--- a/index.html
+++ b/index.html
@@ -37,10 +37,56 @@
                 <select name="" id="input3">
                     <option value="">Select Type</option>
                 </select>
-                <input type="submit" value="Find Now" class="btn-primary">
+                <input type="submit" value="Find Now" class="btn-primary2">
             </div>
         </div>
     </header>
+    <main>
+        <section class="popular-tours">
+            <div class="popular-content">
+                <h1 class="common-heading">Our Popular Tours</h1>
+                <p class="common-paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
+                    massa. Sodales dictumst
+                    nec nibh pellentesque.</p>
+                <ul class="common-paragraph">
+                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis
+                        erat at .</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse nullam.</li>
+                    <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                </ul>
+                <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
+                    natoque aliquet. Id bibendum nunc senectus semper tincidunt.</p>
+                <button class="btn-primary1">Read More</button>
+            </div>
+            <div class="popular-image">
+                <img src="Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+        <section class="destinations">
+            <div class="destination-contents">
+                <h1 class="common-heading">Choose Your Destination</h1>
+                <p class="common-paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
+                    massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="destination-images">
+                <div class="row">
+                    <img src="Images/Rectangle 5.png" alt="">
+                    <img src="Images/Rectangle 8.png" alt="">
+                </div>
+                <div class="row">
+                    <img src="Images/Rectangle 6.png" alt="" width="315px">
+                    <img src="Images/Rectangle 7.png" alt="" width="393px">
+                    <img src="Images/Rectangle 9.png" alt="" width="235px">
+                </div>
+                <div class="row">
+                    <img src="Images/Rectangle 11.png" alt="">
+                    <img src="Images/Rectangle 10.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
