why choose section done

--- a/index.html
+++ b/index.html
@@ -86,6 +86,40 @@
                 </div>
             </div>
         </section>
+        <section class="why-choose">
+            <div class="choose-content">
+                <h1 class="common-heading">Why Choose Us</h1>
+                <p class="common-paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
+                    massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="choose-card">
+                <div class="c21">
+                    <div class="card" id="card1">
+                        <i class="fa-solid fa-hotel"></i>
+                        <h2>Handpicked Hotels</h2>
+                        <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare
+                            nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
+                            natoque aliquet. </p>
+                    </div>
+                    <div class="card" id="card2">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <h2>World Class Service</h2>
+                        <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare
+                            nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
+                            natoque aliquet. </p>
+                    </div>
+                </div>
+                <div>
+                    <div class="card" id="card3">
+                        <i class="fa-solid fa-tags"></i>
+                        <h2>Best Price Guarantee</h2>
+                        <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare
+                            nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
+                            natoque aliquet. </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
