newsletter section done

--- a/index.html
+++ b/index.html
@@ -120,7 +120,32 @@
                 </div>
             </div>
         </section>
+        <section class="newsletter">
+            <form>
+                <h2 id="nh2">Newsletter</h2>
+                <p class="common-paragraph">Get your daily dose of travel news & tips. <br> Sign up today!</p>
+                <hr>
+                <br>
+                <input type="text" placeholder="Enter your name" id="text-input">
+                <br>
+                <br>
+                <input type="email" name="" id="email-input" placeholder="Enter your email">
+                <br>
+                <br>
+                <input type="submit" value="Subscribe" id="submit-input">
+            </form>
+            <div>
+                <img src="Images/Rectangle 8 (1).png" alt="" width="550px" id="ni">
+                <div class="sill">
+                    <h3>Travel.com</h3>
+                    <h1>Save up to 70%</h1>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
