--- a/index.html
+++ b/index.html
@@ -144,7 +144,22 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-div1">
+            <img src="Images/Group 40071 (2).png" alt="" width="35px" height="26px">
+            <h2 class="footer-h2">Hero <span id="ftravel">Travel</span></h2>
+        </div>
+        <p class="common-paragraph">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci
+            <br> potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <ul>
+            <li><i class="fa-brands fa-twitter"></i></li>
+            <li><i class="fa-brands fa-facebook-f"></i></li>
+            <li><i class="fa-brands fa-instagram"></i></li>
+            <li><i class="fa-brands fa-github"></i></li>
+        </ul>
+        <br>
+        <hr style="width: 700px;">
+        <br>
+        <p class="footer-small"><small>2017, All Rights Reserved.</small></p>
     </footer>
 </body>
 
