--- a/index.html
+++ b/index.html
@@ -11,145 +11,157 @@
 </head>
 
 <body>
-    <header>
-        <nav class="nav">
-            <div class="nav-part1">
-                <img src="Images/Group 40071 (2).png" alt="">
-                <h2 class="common-heading">Hero <span id="travel">Travel</span></h2>
-            </div>
-            <ul class="nav-part2">
-                <li><a href="" id="home">Home</a></li>
-                <li><a href="">Packages</a></li>
-                <li><a href="">Testimonial</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
-        <div class="banner">
-            <h1>Explore Your Travel</h1>
-            <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac
-                quis sapien urna eu phasellus.</p>
-            <div class="banner-inputs">
-                <input type="text" placeholder="Where go" class="input1">
-                <select name="" id="input2">
-                    <option value="">When</option>
-                </select>
-                <select name="" id="input3">
-                    <option value="">Select Type</option>
-                </select>
-                <input type="submit" value="Find Now" class="btn-primary2">
-            </div>
-        </div>
-    </header>
-    <main>
-        <section class="popular-tours">
-            <div class="popular-content">
-                <h1 class="common-heading">Our Popular Tours</h1>
-                <p class="common-paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
-                    massa. Sodales dictumst
-                    nec nibh pellentesque.</p>
-                <ul class="common-paragraph">
-                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis
-                        erat at .</li>
-                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
-                        suspendisse nullam.</li>
-                    <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+    <div class="the-body">
+        <header>
+            <nav class="nav">
+                <div class="nav-part1">
+                    <img src="Images/Group 40071 (2).png" alt="">
+                    <h2 class="common-heading">Hero <span id="travel">Travel</span></h2>
+                </div>
+                <ul class="nav-part2">
+                    <li><a href="" id="home">Home</a></li>
+                    <li><a href="">Packages</a></li>
+                    <li><a href="">Testimonial</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact</a></li>
                 </ul>
-                <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus
-                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
-                    natoque aliquet. Id bibendum nunc senectus semper tincidunt.</p>
-                <button class="btn-primary1">Read More</button>
-            </div>
-            <div class="popular-image">
-                <img src="Images/Rectangle 4.png" alt="">
-            </div>
-        </section>
-        <section class="destinations">
-            <div class="destination-contents">
-                <h1 class="common-heading">Choose Your Destination</h1>
-                <p class="common-paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
-                    massa. <br> Sodales dictumst nec nibh pellentesque.</p>
-            </div>
-            <div class="destination-images">
-                <div class="row">
-                    <img src="Images/Rectangle 5.png" alt="">
-                    <img src="Images/Rectangle 8.png" alt="">
-                </div>
-                <div class="row">
-                    <img src="Images/Rectangle 6.png" alt="" width="315px">
-                    <img src="Images/Rectangle 7.png" alt="" width="393px">
-                    <img src="Images/Rectangle 9.png" alt="" width="235px">
-                </div>
-                <div class="row">
-                    <img src="Images/Rectangle 11.png" alt="">
-                    <img src="Images/Rectangle 10.png" alt="">
+            </nav>
+            <div class="banner">
+                <h1>Explore Your Travel</h1>
+                <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim
+                    ac
+                    quis sapien urna eu phasellus.</p>
+                <div class="banner-inputs">
+                    <input type="text" placeholder="Where go" class="input1">
+                    <select name="" id="input2">
+                        <option value="">When</option>
+                    </select>
+                    <select name="" id="input3">
+                        <option value="">Select Type</option>
+                    </select>
+                    <input type="submit" value="Find Now" class="btn-primary2">
                 </div>
             </div>
-        </section>
-        <section class="why-choose">
-            <div class="choose-content">
-                <h1 class="common-heading">Why Choose Us</h1>
-                <p class="common-paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
-                    massa. <br> Sodales dictumst nec nibh pellentesque.</p>
-            </div>
-            <div class="choose-card">
-                <div class="c21">
-                    <div class="card" id="card1">
-                        <i class="fa-solid fa-hotel"></i>
-                        <h2>Handpicked Hotels</h2>
-                        <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare
-                            nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
-                            natoque aliquet. </p>
+        </header>
+        <main>
+            <section class="popular-tours">
+                <div class="popular-content">
+                    <h1 class="common-heading">Our Popular Tours</h1>
+                    <p class="common-paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+                        sit
+                        massa. Sodales dictumst
+                        nec nibh pellentesque.</p>
+                    <ul class="common-paragraph">
+                        <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis
+                            erat at .</li>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                            suspendisse nullam.</li>
+                        <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                    </ul>
+                    <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus
+                        ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing
+                        risus
+                        natoque aliquet. Id bibendum nunc senectus semper tincidunt.</p>
+                    <button class="btn-primary1">Read More</button>
+                </div>
+                <div class="popular-image">
+                    <img src="Images/Rectangle 4.png" alt="">
+                </div>
+            </section>
+            <section class="destinations">
+                <div class="destination-contents">
+                    <h1 class="common-heading">Choose Your Destination</h1>
+                    <p class="common-paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+                        sit
+                        massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+                </div>
+                <div class="destination-images">
+                    <div class="row">
+                        <img src="Images/Rectangle 5.png" alt="">
+                        <img src="Images/Rectangle 8.png" alt="">
                     </div>
-                    <div class="card" id="card2">
-                        <i class="fa-solid fa-location-dot"></i>
-                        <h2>World Class Service</h2>
-                        <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare
-                            nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
-                            natoque aliquet. </p>
+                    <div class="row">
+                        <img src="Images/Rectangle 6.png" alt="" width="315px">
+                        <img src="Images/Rectangle 7.png" alt="" width="393px">
+                        <img src="Images/Rectangle 9.png" alt="" width="235px">
+                    </div>
+                    <div class="row">
+                        <img src="Images/Rectangle 11.png" alt="">
+                        <img src="Images/Rectangle 10.png" alt="">
                     </div>
                 </div>
+            </section>
+            <section class="why-choose">
+                <div class="choose-content">
+                    <h1 class="common-heading">Why Choose Us</h1>
+                    <p class="common-paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+                        sit
+                        massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+                </div>
+                <div class="choose-card">
+                    <div class="c21">
+                        <div class="card" id="card1">
+                            <i class="fa-solid fa-hotel"></i>
+                            <h2>Handpicked Hotels</h2>
+                            <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare
+                                nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing
+                                risus
+                                natoque aliquet. </p>
+                        </div>
+                        <div class="card" id="card2">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <h2>World Class Service</h2>
+                            <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare
+                                nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing
+                                risus
+                                natoque aliquet. </p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="card" id="card3">
+                            <i class="fa-solid fa-tags"></i>
+                            <h2>Best Price Guarantee</h2>
+                            <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare
+                                nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing
+                                risus
+                                natoque aliquet. </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="newsletter">
+                <form>
+                    <h2 id="nh2">Newsletter</h2>
+                    <p class="common-paragraph">Get your daily dose of travel news & tips. <br> Sign up today!</p>
+                    <hr>
+                    <br>
+                    <input type="text" placeholder="Enter your name" id="text-input">
+                    <br>
+                    <br>
+                    <input type="email" name="" id="email-input" placeholder="Enter your email">
+                    <br>
+                    <br>
+                    <input type="submit" value="Subscribe" id="submit-input">
+                </form>
                 <div>
-                    <div class="card" id="card3">
-                        <i class="fa-solid fa-tags"></i>
-                        <h2>Best Price Guarantee</h2>
-                        <p class="common-paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare
-                            nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
-                            natoque aliquet. </p>
+                    <img src="Images/Rectangle 8 (1).png" alt="" width="550px" id="ni">
+                    <div class="sill">
+                        <h3>Travel.com</h3>
+                        <h1>Save up to 70%</h1>
                     </div>
                 </div>
-            </div>
-        </section>
-        <section class="newsletter">
-            <form>
-                <h2 id="nh2">Newsletter</h2>
-                <p class="common-paragraph">Get your daily dose of travel news & tips. <br> Sign up today!</p>
-                <hr>
-                <br>
-                <input type="text" placeholder="Enter your name" id="text-input">
-                <br>
-                <br>
-                <input type="email" name="" id="email-input" placeholder="Enter your email">
-                <br>
-                <br>
-                <input type="submit" value="Subscribe" id="submit-input">
-            </form>
-            <div>
-                <img src="Images/Rectangle 8 (1).png" alt="" width="550px" id="ni">
-                <div class="sill">
-                    <h3>Travel.com</h3>
-                    <h1>Save up to 70%</h1>
-                </div>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
+    </div>
     <footer>
         <div class="footer-div1">
             <img src="Images/Group 40071 (2).png" alt="" width="35px" height="26px">
             <h2 class="footer-h2">Hero <span id="ftravel">Travel</span></h2>
         </div>
-        <p class="common-paragraph">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci
-            <br> potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <p class="common-paragraph" id="footer-paragraph">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra
+            morbi vitae blandit orci
+            <br> potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam.
+        </p>
         <ul>
             <li><i class="fa-brands fa-twitter"></i></li>
             <li><i class="fa-brands fa-facebook-f"></i></li>
@@ -157,7 +169,7 @@
             <li><i class="fa-brands fa-github"></i></li>
         </ul>
         <br>
-        <hr style="width: 700px;">
+        <hr id="fhr">
         <br>
         <p class="footer-small"><small>2017, All Rights Reserved.</small></p>
     </footer>
